@@ -567,6 +567,31 @@ class PassiveDeletesTest(fixtures.MappedTest):
         mapper(MyClass, mytable)
         assert_raises(sa.exc.SAWarning, sa.orm.configure_mappers)
 
+class BatchDeleteIgnoresRowcountTest(fixtures.DeclarativeMappedTest):
+    __requires__ = ('foreign_keys',)
+    @classmethod
+    def setup_classes(cls):
+        class A(cls.DeclarativeBasic):
+            __tablename__ = 'A'
+            __table_args__ = dict(test_needs_fk=True)
+            id = Column(Integer, primary_key=True)
+            parent_id = Column(Integer, ForeignKey('A.id', ondelete='CASCADE'))
+
+    def test_delete_both(self):
+        A = self.classes.A
+        session = Session(testing.db)
+
+        a1, a2 = A(id=1),A(id=2, parent_id=1)
+
+        session.add_all([a1, a2])
+        session.flush()
+
+        session.delete(a1)
+        session.delete(a2)
+
+        # no issue with multi-row count here
+        session.flush()
+
 class ExtraPassiveDeletesTest(fixtures.MappedTest):
     __requires__ = ('foreign_keys',)
 
